BUG fixed